@@ -1,5 +1,8 @@
 2018-12-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR rtl-optimization/88563
+	* gcc.dg/pr88563.c: New test.
+
 	PR c++/87125
 	* g++.dg/cpp0x/pr87125.C: New test.
 
